finish medium alerts