@@ -64,7 +64,7 @@ public class GameServiceTest {
     // Real domain objects
     MatchFormat      format = new MatchFormat();
     List<PlayerPair> pairs  = TestFixtures.createPlayerPairs(2);
-    PlayerPair       teamA  = pairs.get(0);
+    PlayerPair       teamA  = pairs.getFirst();
     PlayerPair       teamB  = pairs.get(1);
 
     Game game = new Game(format);
@@ -108,7 +108,7 @@ public class GameServiceTest {
     Long             gameId       = 20L;
     MatchFormat      format       = new MatchFormat();
     List<PlayerPair> pairs        = TestFixtures.createPlayerPairs(2);
-    PlayerPair       teamA        = pairs.get(0);
+    PlayerPair       teamA        = pairs.getFirst();
     PlayerPair       teamB        = pairs.get(1);
     Game             game         = new Game(format);
     game.setId(gameId);
@@ -128,7 +128,7 @@ public class GameServiceTest {
     req.setScore(score);
     UpdateScoreDTO result = gameService.updateGame(tournamentId, gameId, req);
     assertEquals("Court 1", game.getCourt());
-    assertEquals(6, game.getScore().getSets().get(0).getTeamAScore());
+    assertEquals(6, game.getScore().getSets().getFirst().getTeamAScore());
     // On ne teste plus result.finished(), car la classe UpdateScoreDTO n'a pas ce champ
     // assertEquals(true, result.finished());
     assertEquals(TeamSide.TEAM_A, result.getWinner());
